# BloomFilter

./: CMakeLists.txt  README.md  a.out  file.txt  file_16.txt  file_2.txt  file_4.txt  file_8.txt  file__subCAM_128.txt  file__subCAM_16.txt  file__subCAM_2.txt  file__subCAM_32.txt  file__subCAM_4.txt  file__subCAM_64.txt  file__subCAM_8.txt  hash  hash.cpp  helper.cpp  helper.h  output_of_mean.txt  probability_calculator.py  script.sh  script_vary_LNReg.sh  script_vary_subcams.sh
hashing/: CMakeLists.txt
murmur/: CMakeLists.txt  exmample.txt
